@@ -56,6 +56,7 @@
 	  <child>
 	    <widget class="GtkEntry" id="pl_searchen">
 	      <property name="visible">True</property>
+	      <property name="tooltip" translatable="yes">Search the playlist (supports * and ?) &lt;ctrl+l to select&gt; </property>
 	      <property name="can_focus">True</property>
 	      <property name="editable">True</property>
 	      <property name="visibility">True</property>
@@ -95,11 +96,12 @@
 	  <child>
 	    <widget class="GtkButton" id="button11">
 	      <property name="visible">True</property>
-	      <property name="tooltip" translatable="yes">Show detailed information about the selected song</property>
+	      <property name="tooltip" translatable="yes">Show detailed information about the selected song &lt;ctrl+i&gt;</property>
 	      <property name="can_focus">True</property>
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
 	      <property name="focus_on_click">True</property>
 	      <signal name="clicked" handler="pl2_show_song_info" last_modification_time="Tue, 22 Jun 2004 20:02:38 GMT"/>
+	      <accelerator key="i" modifiers="GDK_CONTROL_MASK" signal="clicked"/>
 
 	      <child>
 		<widget class="GtkImage" id="image2">
@@ -255,12 +257,14 @@
 	  <child>
 	    <widget class="GtkButton" id="button10">
 	      <property name="visible">True</property>
+	      <property name="tooltip" translatable="yes">Removes the selected songs. &lt;Del&gt;</property>
 	      <property name="can_focus">True</property>
 	      <property name="label">gtk-remove</property>
 	      <property name="use_stock">True</property>
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
 	      <property name="focus_on_click">True</property>
 	      <signal name="clicked" handler="pl2_delete_selected_songs" last_modification_time="Sun, 27 Jun 2004 13:38:43 GMT"/>
+	      <accelerator key="Delete" modifiers="0" signal="clicked"/>
 	    </widget>
 	    <packing>
 	      <property name="padding">0</property>
